@@ -1,3 +1,8 @@
+Tue Oct  6 19:39:22 UTC 2009 / Arjen de Korte <arjen@de-korte.org>
+
+ - m4/nut_check_libssl.m4: use pkg-config for compiler and linker flags
+ - m4/nut_check_libusb.m4: minor change
+  
 Tue Oct  6 19:16:08 UTC 2009 / Arjen de Korte <arjen@de-korte.org>
 
  - MAINTAINERS: Remove entry for Peter Selinger (by request)
